--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -64,10 +64,10 @@
     <!-- build:js app/app.js  -->
     <!-- inject:js -->
     <script src="app/app.module.js"></script>
-    <script src="app/account/reset/finish/reset.finish.state.js"></script>
-    <script src="app/account/reset/finish/reset.finish.controller.js"></script>
     <script src="app/account/reset/request/reset.request.state.js"></script>
     <script src="app/account/reset/request/reset.request.controller.js"></script>
+    <script src="app/account/reset/finish/reset.finish.state.js"></script>
+    <script src="app/account/reset/finish/reset.finish.controller.js"></script>
     <script src="app/services/user/user.service.js"></script>
     <script src="app/services/auth/register.service.js"></script>
     <script src="app/services/auth/principal.service.js"></script>
@@ -83,6 +83,13 @@
     <script src="app/layouts/navbar/navbar.controller.js"></script>
     <script src="app/layouts/navbar/active-link.directive.js"></script>
     <script src="app/layouts/error/error.state.js"></script>
+    <script src="app/entities/categoria/categoria.state.js"></script>
+    <script src="app/entities/categoria/categoria.service.js"></script>
+    <script src="app/entities/categoria/categoria.search.service.js"></script>
+    <script src="app/entities/categoria/categoria.controller.js"></script>
+    <script src="app/entities/categoria/categoria-dialog.controller.js"></script>
+    <script src="app/entities/categoria/categoria-detail.controller.js"></script>
+    <script src="app/entities/categoria/categoria-delete-dialog.controller.js"></script>
     <script src="app/components/util/truncate-words.filter.js"></script>
     <script src="app/components/util/truncate-characters.filter.js"></script>
     <script src="app/components/util/sort.directive.js"></script>
